--- a/src/components/estilos.css
+++ b/src/components/estilos.css
@@ -3,18 +3,22 @@
 	margin: 0;
 	padding: 0;
 }
+:root {
+    --surface-color: #fff;
+    --curve: 40;
+  }
 
-@font-face{
-	font-family: MinionCondensed;
-	src: url('./font/MinionCondensed.otf');
-}
 
 html {
-    font-size: 120%; /* 100% = 16px */
-    font-family: MinionCondensed;
+    font-size: 100%; /* 100% = 16px */
+    
 }
 body{
-	width: 100%;
+	margin-left: 10%;
+	margin-right: 10%;
+	width: 80%;
+	background-color: #fbd394;
+	
 }
 h1{
 	font-size: 2em;
@@ -23,3 +27,208 @@ h1{
 h2, h3, h4, h5{
 	font-weight: normal;
 }
+/*RESET*/
+
+/*HEADER*/
+header{
+	display: flex;
+	justify-content: center;
+	width: 100%;
+	height: auto;
+}
+header img{
+	margin-left: 30px;
+}
+
+/*NAV*/
+.nav{
+	display: flex;
+	flex-direction: row;
+	top: 0px;
+	width: 100%;
+	margin-left: 20px;
+}
+nav{
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+nav ul li{	
+	display: inline-block;
+	margin-right: 20px;
+	
+}
+nav ul li a{	
+	display: inline-block;
+	text-decoration: none;
+	color: #e25ca5;
+	
+}
+
+
+nav ul li {
+	--c: goldenrod;
+    color: var(--c);
+    font-size: 12px;
+    border: 0.3em solid var(--c);
+    border-radius: 0.5em;
+    width: 12em;
+    height: 3em;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-family: sans-serif;
+    letter-spacing: 0.1em;
+    text-align: center;
+    line-height: 3em;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+    transition: 0.5s;
+    margin: 1.5em;
+	
+}
+
+nav ul li span {
+    position: absolute;
+    width: 25%;
+    height: 100%;
+    background-color: var(--c);
+    transform: translateY(150%);
+    border-radius: 50%;
+    left: calc((var(--n) - 1) * 25%);
+    transition: 0.5s;
+    transition-delay: calc((var(--n) - 1) * 0.1s);
+    z-index: -1;
+}
+
+nav ul li:hover {
+    color: black;
+}
+
+nav ul li:hover span {
+    transform: translateY(0) scale(2);
+}
+
+nav ul li span:nth-child(1) {
+    --n: 1;
+}
+
+nav ul li span:nth-child(2) {
+    --n: 2;
+}
+
+nav ul li span:nth-child(3) {
+    --n: 3;
+}
+
+nav ul li span:nth-child(4) {
+    --n: 4;
+}
+
+/*PRODUCTOS - MENU*/
+.cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 7rem;
+    margin: 4rem 5vw;
+    padding: 0;
+    list-style-type: none;
+}
+  
+.card {
+    position: relative;
+    display: block;
+    height: 130%;  
+    border-radius: calc(var(--curve) * 1px);
+    overflow: hidden;
+    text-decoration: none;
+
+}
+  
+.card__image {      
+    width: 100%;
+    height: auto;
+}
+.card__overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;      
+    border-radius: calc(var(--curve) * 1px);    
+    background-color: var(--surface-color);      
+    transform: translateY(100%);
+    transition: .2s ease-in-out;
+  }
+  
+  .card:hover .card__overlay {
+    transform: translateY(0);
+  }
+  
+  .card__header {
+    position: relative;
+    display: flex;
+    align-items: center;
+    gap: 2em;
+    padding: 2em;
+    border-radius: calc(var(--curve) * 1px) 0 0 0;    
+    background-color: var(--surface-color);
+    transform: translateY(-100%);
+    transition: .2s ease-in-out;
+  }
+  
+  .card__arc {
+    width: 80px;
+    height: 80px;
+    position: absolute;
+    bottom: 100%;
+    right: 0;      
+    z-index: 1;
+  }
+  
+  .card__arc path {
+    fill: var(--surface-color);
+    d: path("M 40 80 c 22 0 40 -22 40 -40 v 40 Z");
+  }       
+  
+  .card:hover .card__header {
+    transform: translateY(0);
+  }
+  
+  .card__thumb {
+    flex-shrink: 0;
+    width: 50px;
+    height: 50px;      
+    border-radius: 50%;      
+  }
+  
+  .card__title {
+    font-size: 1em;
+    margin: 0 0 .3em;
+    color: #e25ca5;
+  }
+  
+  .card__tagline {
+    display: block;
+    margin: 1em 0;
+    font-family: "MockFlowFont";  
+    font-size: .8em; 
+    color: #5c3a0d;  
+  }
+  
+  .card__status {
+    font-size: .8em;
+    color: #5c3a0d;
+  }
+  
+  .card__description {
+    padding: 0 2em 2em;
+    margin: 0;
+    color: #5c3a0d;
+    font-family: "MockFlowFont";   
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    overflow: hidden;
+  }    
