--- a/src/components/estilos.css
+++ b/src/components/estilos.css
@@ -232,3 +232,304 @@ nav ul li span:nth-child(4) {
     -webkit-line-clamp: 3;
     overflow: hidden;
   }    
+
+  /*ITEM*/
+  .wrapper {
+	height: 420px;
+	width: 654px;
+	margin: 50px auto;
+	border-radius: 7px 7px 7px 7px;
+	/* VIA CSS MATIC https://goo.gl/cIbnS */
+	-webkit-box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
+	-moz-box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
+	box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
+  }
+  
+  .product-img {
+	float: left;
+	height: 420px;
+	width: 327px;
+  }
+  
+  .product-img img {
+	border-radius: 7px 0 0 7px;
+  }
+  
+  .product-info {
+	float: left;
+	height: 420px;
+	width: 327px;
+	border-radius: 0 7px 10px 7px;
+	background-color: #ffffff;
+  }
+  
+  .product-text {
+	height: 200px;
+	width: 327px;
+  }
+  
+  .product-text h1 {
+	margin: 0 0 0 38px;
+	padding-top: 52px;
+	font-size: 34px;
+	color: #474747;
+  }
+  
+  .product-text h1,
+  .product-price-btn p {
+	font-family: 'Bentham', serif;
+  }
+  
+  .product-text h2 {
+	margin: 0 0 47px 38px;
+	font-size: 13px;
+	font-family: 'Raleway', sans-serif;
+	font-weight: 400;
+	text-transform: uppercase;
+	color: #d2d2d2;
+	letter-spacing: 0.2em;
+  }
+  
+  .product-text p {
+	height: 60px;
+	margin: 0 0 0 38px;
+	font-family: 'Playfair Display', serif;
+	color: #8d8d8d;
+	line-height: 1.7em;
+	font-size: 15px;
+	font-weight: lighter;
+	overflow: hidden;
+  }
+  
+  .product-price-btn {
+	height: 103px;
+	width: 327px;
+	margin-top: 30px;
+	position: relative;
+  }
+  
+  .product-price-btn p {
+	display: inline-block;
+	position: absolute;
+	top: -13px;
+	height: 50px;
+	font-family: 'Trocchi', serif;
+	margin: 0 0 0 38px;
+	font-size: 28px;
+	font-weight: lighter;
+	color: #474747;
+  }
+  
+  span {
+	display: inline-block;
+	height: 50px;
+	font-family: 'Suranna', serif;
+	font-size: 34px;
+  }
+  
+  .product-price-btn button {
+	display: inline-block;
+	height: 50px;
+	width: 176px;
+	margin-top: 10%;
+	margin-left: 40px;
+	box-sizing: border-box;
+	border: transparent;
+	border-radius: 60px;
+	font-family: 'Raleway', sans-serif;
+	font-size: 14px;
+	font-weight: 500;
+	text-transform: uppercase;
+	letter-spacing: 0.2em;
+	color: #ffffff;
+	background-color: #9cebd5;
+	cursor: pointer;
+	outline: none;
+  }
+  
+  .product-price-btn button:hover {
+	background-color: #79b0a1;
+  }
+    /*COUNTER*/
+  .product-price-btn .counter{
+	text-align: center; 
+	margin-top:30px;
+  }
+  .product-price-btn .main-hr {
+	width: 30%;
+	border: none;
+	border-top: 1px solid #c3c3c3;
+  }
+  .product-price-btn .icon-btn {
+	width: 50px;
+	height: 50px;
+	border: 1px solid #9cebd5;
+	background: #9cebd5;
+	border-radius: 25px;
+	overflow: hidden;
+	position: relative;
+	transition: width 0.2s ease-in-out;
+  }
+  .product-price-btn .add-btn:hover {
+	width: 120px;
+  }
+  .product-price-btn .add-btn::before,
+  .product-price-btn .add-btn::after {
+	transition: width 0.2s ease-in-out, border-radius 0.2s ease-in-out;
+	content: "";
+	position: absolute;
+	height: 4px;
+	width: 10px;
+	top: calc(50% - 2px);
+	background: #fff;
+  }
+  .product-price-btn .add-btn::after {
+	right: 14px;
+	overflow: hidden;
+	border-top-right-radius: 2px;
+	border-bottom-right-radius: 2px;
+  }
+  .product-price-btn .add-btn::before {
+	left: 14px;
+	border-top-left-radius: 2px;
+	border-bottom-left-radius: 2px;
+  }
+  .product-price-btn .icon-btn:focus {
+	outline: none;
+  }
+  .product-price-btn .btn-txt {
+	opacity: 0;
+	transition: opacity 0.2s;
+  }
+  .product-price-btn .add-btn:hover::before,
+  .product-price-btn .add-btn:hover::after {
+	width: 4px;
+	border-radius: 2px;
+  }
+  .product-price-btn .add-btn:hover .btn-txt {
+	opacity: 1;
+  }
+  .product-price-btn .add-icon::after,
+  .product-price-btn .add-icon::before {
+	transition: all 0.2s ease-in-out;
+	content: "";
+	position: absolute;
+	height: 20px;
+	width: 2px;
+	top: calc(50% - 10px);
+	background: #fff;
+	overflow: hidden;
+  }
+  .product-price-btn .add-icon::before {
+	left: 22px;
+	border-top-left-radius: 2px;
+	border-bottom-left-radius: 2px;
+  }
+  .product-price-btn .add-icon::after {
+	right: 22px;
+	border-top-right-radius: 2px;
+	border-bottom-right-radius: 2px;
+  }
+  .product-price-btn .add-btn:hover .add-icon::before {
+	left: 15px;
+	height: 4px;
+	top: calc(50% - 2px);
+  }
+  .product-price-btn .add-btn:hover .add-icon::after {
+	right: 15px;
+	height: 4px;
+	top: calc(50% - 2px);
+  }
+  
+
+/*COUNTER*/
+.product-price-btn .counter{
+	text-align: center; 
+	margin-top:30px;
+}
+.product-price-btn .main-hr {
+	width: 30%;
+	border: none;
+}
+.product-price-btn .icon-btn {
+	width: 50px;
+	height: 50px;
+	border: 1px solid #9cebd5;
+	background: #9cebd5;
+	border-radius: 25px;
+	overflow: hidden;
+	position: relative;
+	transition: width 0.2s ease-in-out;
+}
+.product-price-btn .add-btn:hover {
+	width: 120px;
+}
+.product-price-btn .add-btn::before,
+.product-price-btn .add-btn::after {
+	transition: width 0.2s ease-in-out, border-radius 0.2s ease-in-out;
+	content: "";
+	position: absolute;
+	height: 4px;
+	width: 10px;
+	top: calc(50% - 2px);
+	background: #fff;
+}
+.product-price-btn .add-btn::after {
+	right: 14px;
+	overflow: hidden;
+	border-top-right-radius: 2px;
+	border-bottom-right-radius: 2px;
+}
+.product-price-btn .add-btn::before {
+	left: 14px;
+	border-top-left-radius: 2px;
+	border-bottom-left-radius: 2px;
+}
+.product-price-btn .icon-btn:focus {
+	outline: none;
+}
+.product-price-btn .btn-txt {
+	opacity: 0;
+	transition: opacity 0.2s;
+}
+.product-price-btn .add-btn:hover::before,
+.product-price-btn .add-btn:hover::after {
+	width: 4px;
+	border-radius: 2px;
+}
+.product-price-btn .add-btn:hover .btn-txt {
+	opacity: 1;
+}
+.product-price-btn .add-icon::after,
+.product-price-btn .add-icon::before {
+	transition: all 0.2s ease-in-out;
+	content: "";
+	position: absolute;
+	height: 20px;
+	width: 2px;
+	top: calc(50% - 10px);
+	background: #fff;
+	overflow: hidden;
+}
+.product-price-btn .add-icon::before {
+	left: 22px;
+	border-top-left-radius: 2px;
+	border-bottom-left-radius: 2px;
+}
+.product-price-btn .add-icon::after {
+	right: 22px;
+	border-top-right-radius: 2px;
+	border-bottom-right-radius: 2px;
+}
+.product-price-btn .add-btn:hover .add-icon::before {
+	left: 15px;
+	height: 4px;
+	top: calc(50% - 2px);
+}
+.product-price-btn .add-btn:hover .add-icon::after {
+	right: 15px;
+	height: 4px;
+	top: calc(50% - 2px);
+}
+	  
+	
